# ultraschall-plugin

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README.org  bootstrap.ps1  bootstrap.sh  build.ps1  build.sh
.github/workflows/: build.yml  cmake.yml
cmake/: GlobalArgs.cmake  arch.cmake  linux.cmake  macos.cmake  ubuntu.cmake  win32.cmake  windows.cmake
docs/: CHANGELOG-DE.md  CHANGELOG.md  INSTALL-DE.md  INSTALL.md  README-DE.md  README.md  macos-build-instructions.md
include/reaper/: reaper_plugin_functions.h
scripts/: BuildTools.ps1  BuildTools.sh  BuildVars.ps1  DevCmdPrompt.ps1  Doxyfile  Doxyfile.in  DoxygenFooter.tex  DoxygenHeader.tex  DoxygenStyleSheet.sty  doxygen.sty
src/: Application.cpp  Application.h  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  ChapterImage.h  ChapterTag.h  ChapterUrl.h  Common.h  CustomAction.cpp  CustomAction.h  CustomActionFactory.cpp  CustomActionFactory.h  CustomActionManager.cpp  CustomActionManager.h  FileDialog.h  FileManager.cpp  FileManager.h  Globals.h  HttpClient.cpp  HttpClient.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  ICommand.h  ICustomAction.h  ID3V2.cpp  ID3V2.h  ID3V2Context.cpp  ID3V2Context.h  ID3V2Reader.cpp  ID3V2Reader.h  ID3V2Writer.cpp  ID3V2Writer.h  ISOBMFF.cpp  ISOBMFF.h  ISOBMFFContext.cpp  ISOBMFFContext.h  ISOBMFFReader.cpp  (+102 more)
src/linux/: FileDialog.cpp  Platform.cpp  PlatformGateway.cpp  UIFileDialog.cpp
src/macos/: FileDialog.cpp  Platform.cpp  PlatformGateway.cpp  UIFileDialog.cpp  UIMessageDialog.cpp
src/win32/: FileDialog.cpp  Platform.cpp  PlatformGateway.cpp  UIFileDialog.cpp  UIMessageDialog.cpp
